--- a/frontend/templates/Patient.html
+++ b/frontend/templates/Patient.html
@@ -262,18 +262,26 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.js"></script>
 
     <script>
-        // Check if there are any error messages
-        {% if messages %}
-            {% for message in messages %}
-                Swal.fire({
-                    icon: 'error',
-                    title: 'Oops...',
-                    text: '{{ message }}',  // Show the error message
-                    confirmButtonText: 'Close'
-                });
-            {% endfor %}
+        {% if error_message %}
+        Swal.fire({
+            icon: 'error',
+            title: 'Oops...',
+            text: '{{ error_message }}',
+            confirmButtonText: 'Close'
+        });
+        {% endif %}
+
+        {% if success_message %}
+        Swal.fire({
+            icon: 'success',
+            title: 'Success!',
+            text: '{{ success_message }}',
+            confirmButtonText: 'Close'
+        });
         {% endif %}
     </script>
+
+
 
     <!-- Include MDB JS -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.1/mdb.min.js"></script>
