--- a/frontend/templates/PractiLogin.html
+++ b/frontend/templates/PractiLogin.html
@@ -97,7 +97,13 @@
 
                         <!-- Login Button -->
                         <button type="submit" class="btn btn-primary btn-block w-100">Login</button>
+
                     </form>
+
+                    <p class="text-center text-muted mt-4">
+                        Forgot your password? <a href="{% url 'frontend:practitioner_forgot_password' %}" class="text-primary">Reset it here</a>
+                    </p>
+                    
 
                     <p class="text-center text-muted mt-4">
                         Don't have an account? <a href="{% url 'frontend:practitioner_signup' %}" class="text-primary">Sign up</a>
@@ -111,18 +117,27 @@
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11.4.10/dist/sweetalert2.min.js"></script>
 
     <script>
-        // Check if there are any messages to display
-        {% if messages %}
-            {% for message in messages %}
-                Swal.fire({
-                    icon: 'error', // Fixed icon for all messages as "error"
-                    title: 'Oops...',
-                    text: '{{ message }}',  // Display the message text
-                    confirmButtonText: 'Close'
-                });
-            {% endfor %}
+        {% if error_message %}
+        Swal.fire({
+            icon: 'error',
+            title: 'Oops...',
+            text: '{{ error_message }}',
+            confirmButtonText: 'Close'
+        });
+        {% endif %}
+
+        {% if success_message %}
+        Swal.fire({
+            icon: 'success',
+            title: 'Success!',
+            text: '{{ success_message }}',
+            confirmButtonText: 'Close'
+        });
         {% endif %}
     </script>
+
+
+
 
     <!-- MDB JS -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/6.3.1/mdb.min.js"></script>
