--- a/practitionerdashboard/templates/practitionerdashboard/base.html
+++ b/practitionerdashboard/templates/practitionerdashboard/base.html
@@ -334,18 +334,18 @@
                     <ul>
                         <li class="menu-title">Main</li>
                         <li class="active">
-                            <a href="{% url 'patientdashboard:dashboard' %}"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
+                            <a href="{% url 'practitionerdashboard:dashboard' %}"><i class="fa fa-dashboard"></i> <span>Dashboard</span></a>
                         </li>
                         <li>
-                            <a href="{% url 'patientdashboard:mypatient' %}"><i class="fa fa-wheelchair"></i> <span>Patients</span></a>
+                            <a href="{% url 'practitionerdashboard:mypatient' %}"><i class="fa fa-wheelchair"></i> <span>Patients</span></a>
                         </li>
 
 
                         <li>
-                            <a href="{% url 'frontend:appointment' %}"><i class="fa fa-calendar"></i> <span>Appointments</span></a>
+                            <a href="{% url 'practitionerdashboard:appointment' %}"><i class="fa fa-calendar"></i> <span>Appointments</span></a>
                         </li>
                         <li>
-                            <a href="{% url 'patientdashboard:schedule_timming' %}"><i class="fa fa-calendar-check-o"></i> <span>Schedule Timming</span></a>
+                            <a href="{% url 'practitionerdashboard:schedule_timming' %}"><i class="fa fa-calendar-check-o"></i> <span>Schedule Timming</span></a>
                         </li>
                         <li class="submenu">
                             <a href="#"><i class="fa fa-user"></i> <span>Departments</span> <span class="menu-arrow"></span></a>
@@ -356,10 +356,10 @@
                             </ul>
                         </li>
                         <li>
-                            <a href="{% url 'patientdashboard:reviews' %}"><i class="fa fa-comments"></i> <span>Reviews</span> <span class="badge badge-pill bg-primary float-right">5</span></a>
+                            <a href="{% url 'practitionerdashboard:reviews' %}"><i class="fa fa-comments"></i> <span>Reviews</span> <span class="badge badge-pill bg-primary float-right">5</span></a>
                         </li>
                         <li>
-                            <a href="{% url 'patientdashboard:chat' %}"><i class="fa fa-comments"></i> <span>Chat</span> <span class="badge badge-pill bg-primary float-right">5</span></a>
+                            <a href="{% url 'practitionerdashboard:chat' %}"><i class="fa fa-comments"></i> <span>Chat</span> <span class="badge badge-pill bg-primary float-right">5</span></a>
                         </li>
                     </ul>
                 </div>
