--- a/practitionerdashboard/templates/practitionerdashboard/mypatient.html
+++ b/practitionerdashboard/templates/practitionerdashboard/mypatient.html
@@ -1,4 +1,4 @@
-{% extends "patientdashboard/base.html" %}
+{% extends "practitionerdashboard/base.html" %}
 {% load static %}
 
 {% block content %}
