--- a/frontend/templates/temp.html
+++ b/frontend/templates/temp.html
@@ -409,7 +409,7 @@
                         </li>
                         <li class="nav-item">
                             <!-- Practitioner Dashboard Button -->
-                            <a href="{% url 'patient_dashboard:dashboard' %}" class="btn btn-appointment text-white"
+                            <a href="{% url 'practitioner_dashboard:dashboard' %}" class="btn btn-appointment text-white"
                                style="background-color: #007bff; border-radius: 25px; padding: 10px 20px; font-size: 14px; text-decoration: none; font-weight: bold;">
                                Practitioner Dashboard
                             </a>
