add some changes

--- a/frontend/templates/temp.html
+++ b/frontend/templates/temp.html
@@ -427,7 +427,7 @@
                         </li>
                         <li class="nav-item">
                             <!-- Patient Dashboard Button -->
-                            <a href="{% url 'patient_dashboard:dashboard' %}" class="btn btn-appointment text-white"
+                            <a href="{% url 'patient_dashboard:appointments_patients' %}" class="btn btn-appointment text-white"
                                style="background-color: #f76c5e; border-radius: 25px; padding: 10px 20px; font-size: 14px; text-decoration: none; font-weight: bold;">
                                Patient Dashboard
                             </a>
