--- a/practitionerdashboard/templates/practitionerdashboard/base.html
+++ b/practitionerdashboard/templates/practitionerdashboard/base.html
@@ -3,6 +3,7 @@
 {% load static %}
 <!DOCTYPE html>
 
+{% load user_info_tags  %}
 <html lang="en">
 
 
@@ -519,7 +520,7 @@
         <li class="nav-item dropdown has-arrow">
             <a href="#" class="dropdown-toggle nav-link user-link" data-toggle="dropdown">
                 <span class="user-img">
-                    <img class="rounded-circle" src="{% static 'assets/img/doctor-thumb-02.jpg' %}" width="30" height="30" alt="Profile Picture">
+                    <img class="rounded-circle" src="{% get_practitioner_image request %}" width="30" height="30" alt="Profile Picture">
                 </span>
             </a>
             <div class="dropdown-menu">
