practitioner schedule timming

--- a/MedicalSite/patientdashboard/templates/patientdashboard/patient_base.html
+++ b/MedicalSite/patientdashboard/templates/patientdashboard/patient_base.html
@@ -607,7 +607,7 @@
                                 </a>
                             </li>
                             <li class="{% if request.path == '/patient-dashboard/booking/' %}active{% endif %}">
-                                <a href="{% url 'patientdashboard:booking' %}">
+                                <a href="{% url 'patient_dashboard:booking' %}">
                                     <i class="fa fa-calendar" style="color: white;"></i> <span style="color: white;">Book Appointments</span>
                                 </a>
                             </li>
@@ -824,3 +824,11 @@
 </body>
 
 </html>
+
+
+
+
+
+
+
+
