--- a/MedicalSite/practitionerdashboard/templates/practitionerdashboard/base.html
+++ b/MedicalSite/practitionerdashboard/templates/practitionerdashboard/base.html
@@ -571,7 +571,7 @@
                             </a>
                         </li>
                         <li class="{% if request.path == '/practitioner-dashboard/appointment/' %}active{% endif %}">
-                            <a href="{% url 'practitionerdashboard:appointment' %}">
+                            <a href="">
                                 <i class="fa fa-calendar" ></i>
                                 <span >Appointments</span>
 
